--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <h1 class="text-center m-4 text-primary">face-detection Application</h1>
     <div class="container" align="center">
         <video id="video" autoplay style="display: none;"></video>
-        <canvas id="canvas" width="400px" height="400"></canvas>
+        <canvas id="canvas" width="400" height="400"></canvas>
     </div>
     <footer class="text-center Footer">
         <p class="paragraph">Copyright <i class="fa fa-copyright" aria-hidden="true"></i> | developed by VASUDEV KANUNGO
